# job-search-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/job_search_agent/: __init__.py
src/job_search_agent/agents/: base.py  resume_agent.py
src/job_search_agent/api/: dependencies.py  main.py  models.py
src/job_search_agent/api/routes/: __init__.py  core.py  monitoring.py
src/job_search_agent/configs/: setting.py
src/job_search_agent/configs/pricing/: current.json
src/job_search_agent/core/llm_gateways/: cost_controller.py  gateway.py  log.py  model_router.py  observability.py
src/job_search_agent/core/llm_gateways/prompts/: matching_prompts.py  optimizer_prompts.py  resume_prompts.py
src/job_search_agent/core/orchestration/: graph.py  orchestrator.py
src/job_search_agent/core/orchestration/agents/: __init__.py  base.py  job_optimizer_agent.py  resume_agent.py  resume_ranking_agent.py
src/job_search_agent/core/orchestration/models/: job_vacancy.py  matching_models.py  optimization_result.py  resume_models.py
src/job_search_agent/core/orchestration/tools/api_call/: glorri_api_call.py  model_mapper.py
src/job_search_agent/core/orchestration/tools/search_tool/: base.py  ddg_search_tool.py  tavily_search_tool.py  trusted_websites.py
src/job_search_agent/core/orchestration/tools/website_scrapper/: __init__.py  base.py  engine.py
src/job_search_agent/models/: job_vacancy.py  resume_models.py
src/job_search_agent/prompts/: resume_prompts.py
src/job_search_agent/tools/search_tool/: base.py  ddg_search_tool.py  normalize_result.py  query_builder.py  trusted_websites.py
src/job_search_agent/utils/: cosine_similarity.py  helper.py  resume_parser.py
(+2 files in other folders)
