[project]
name = "job-search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muradeliyev", email = "muradaliyev2229@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "pdfplumber>=0.11.8",
    "pydantic-settings>=2.12.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain-huggingface>=1.2.0",
    "sentence-transformers>=5.2.0",
    "langgraph>=1.0.5",
    "langsmith>=0.5.1",
    "torch",
    "python-multipart>=0.0.21",
    "tavily-python>=0.7.17",
]

[project.scripts]
job-search-agent = "job_search_agent:main"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
